base do estilo para a pagina de login

--- a/login.html
+++ b/login.html
@@ -7,25 +7,27 @@
 </head>
 <body>
 	<section class="page-login">
-		<div class="row">
-			<div class="col-sm-4 col-sm-offset-4">
-				<header class="page-login-title">Login</header>
+		<div class="container">
+			<div class="row">
+				<div class="col-sm-4 col-sm-offset-4">
+					<header class="page-login-title">Login</header>
 
-				<!-- BEGIN page-login-form -->
-				<form class="page-login-form" action="" method="post">
-					<div class="form-group">
-						<input class="form-control" type="text" name="username" placeholder="Username">
-					</div>
-					<div class="form-group">
-						<input class="form-control" type="password" name="username" placeholder="Password">
-					</div>
-					<div class="form-group">
-						<button class="btn btn-text">
-							<i class="glyphicon glyphicon-play"></i>
-						</button>
-					</div>
-				</form>
-				<!-- END page-login-form -->
+					<!-- BEGIN page-login-form -->
+					<form class="page-login-form custom-form" action="" method="post">
+						<div class="form-group">
+							<input class="form-control" type="text" name="username" placeholder="Username">
+						</div>
+						<div class="form-group">
+							<input class="form-control" type="password" name="username" placeholder="Password">
+						</div>
+						<div class="form-group">
+							<button class="btn btn-text btn-enviar">
+								<i class="glyphicon glyphicon-play"></i>
+							</button>
+						</div>
+					</form>
+					<!-- END page-login-form -->
+				</div>
 			</div>
 		</div>
 	</section><!-- /.page-login -->
