--- a/login.html
+++ b/login.html
@@ -10,7 +10,9 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-sm-4 col-sm-offset-4">
-					<header class="page-login-title">Login</header>
+					<header class="page-login-header">
+						<h1 class="page-login-title">Login</h1>
+					</header>
 
 					<!-- BEGIN page-login-form -->
 					<form class="page-login-form custom-form" action="" method="post">
