implementar estrutura para a galeria

--- a/index.html
+++ b/index.html
@@ -37,6 +37,11 @@
 			  </div><!-- /.container -->
 			</nav>
 		</header>
+		<div class="page-home-gallery">
+			<div class="gallery-item">
+				
+			</div>
+		</div>
 	</section><!-- /.page-home -->
 </body>
 </html>
