alterar a grade do container para o carrousel

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		<header class="page-home-header">
 			<nav class="navbar">
 			  <div class="container">
-			  
+
 			    <!-- botao para abri menu na versao mobile -->
 			    <div class="navbar-header">
 			      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
@@ -47,27 +47,31 @@
 
 		<!-- BEGIN galeria no carousel -->
 		<div class="container">
-			<div class="page-home-gallery rodar-galeria">
-				<div class="gallery-item">
-					<img src="http://lorempixel.com/output/animals-q-c-280-170-10.jpg">
+			<div class="row">
+				<div class="col-sm-10 col-sm-offset-1">
+					<div class="page-home-gallery rodar-galeria">
+						<div class="gallery-item">
+							<img src="http://lorempixel.com/output/animals-q-c-280-170-10.jpg">
+						</div>
+						<div class="gallery-item">
+							<img src="http://lorempixel.com/output/animals-q-c-280-170-4.jpg">
+						</div>
+						<div class="gallery-item">
+							<img src="http://lorempixel.com/output/animals-q-c-280-170-5.jpg">
+						</div>
+						<div class="gallery-item">
+							<img src="http://lorempixel.com/output/animals-q-c-280-170-8.jpg">
+						</div>
+						<div class="gallery-item">
+							<img src="http://lorempixel.com/output/animals-q-c-280-170-1.jpg">
+						</div>
+					</div><!-- /.page-home-gallery -->
 				</div>
-				<div class="gallery-item">
-					<img src="http://lorempixel.com/output/animals-q-c-280-170-4.jpg">
-				</div>
-				<div class="gallery-item">
-					<img src="http://lorempixel.com/output/animals-q-c-280-170-5.jpg">
-				</div>
-				<div class="gallery-item">
-					<img src="http://lorempixel.com/output/animals-q-c-280-170-8.jpg">
-				</div>
-				<div class="gallery-item">
-					<img src="http://lorempixel.com/output/animals-q-c-280-170-1.jpg">
-				</div>
-			</div><!-- /.page-home-gallery -->
+			</div>
 		</div>
 		<!-- END galeria no carousel -->
-	</section><!-- /.page-home -->
 
+	</section><!-- /.page-home -->
 
 	<script type="text/javascript" src="node_modules/jquery/dist/jquery.min.js"></script>
 	<script type="text/javascript" src="node_modules/owlcarousel/owl-carousel/owl.carousel.js"></script>
