--- a/index.html
+++ b/index.html
@@ -71,6 +71,16 @@
 		</div>
 		<!-- END galeria no carousel -->
 
+		<section class="page-home-featured">
+			<div class="container">
+				<div class="row">
+					<div class="col-sm-3"></div>
+					<div class="col-sm-6"></div>
+					<div class="col-sm-3"></div>
+				</div>
+			</div>
+		</section>
+
 	</section><!-- /.page-home -->
 
 	<script type="text/javascript" src="node_modules/jquery/dist/jquery.min.js"></script>
