corrigir titulo da pagina inicial e definir charset

--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Login</title>
+	<meta charset="utf-8">
+	<title>Página Inicial</title>
 	<link rel="stylesheet" type="text/css" href="node_modules/bootstrap/dist/css/bootstrap.css">
 	<link rel="stylesheet" type="text/css" href="node_modules/owlcarousel/owl-carousel/owl.theme.css">
 	<link rel="stylesheet" type="text/css" href="node_modules/owlcarousel/owl-carousel/owl.transitions.css">
