criar area dos qrcodes na pagina inicial

--- a/index.html
+++ b/index.html
@@ -71,16 +71,45 @@
 			</div>
 		</div>
 		<!-- END galeria no carousel -->
-
+		
+		<!-- BEGIN destaques da pagina inicial -->
 		<section class="page-home-featured">
 			<div class="container">
 				<div class="row">
-					<div class="col-sm-3"></div>
+					<div class="col-sm-3">
+						<div class="row featured-qr-code">
+							<div class="col-sm-6 area-item-qr-code">
+								<div class="item-qr-code">
+									<img class="qr-code-image" src="src/img/qr-code.png">
+									<h3 class="qr-code-title">wechat</h3>
+								</div>
+							</div>
+							<div class="col-sm-6 area-item-qr-code">
+								<div class="item-qr-code">
+									<img class="qr-code-image" src="src/img/qr-code.png">
+									<h3 class="qr-code-title">facebook</h3>
+								</div>
+							</div>
+							<div class="col-sm-6 area-item-qr-code">
+								<div class="item-qr-code">
+									<img class="qr-code-image" src="src/img/qr-code.png">
+									<h3 class="qr-code-title">line</h3>
+								</div>
+							</div>
+							<div class="col-sm-6 area-item-qr-code">
+								<div class="item-qr-code">
+									<img class="qr-code-image" src="src/img/qr-code.png">
+									<h3 class="qr-code-title">twitter</h3>
+								</div>
+							</div>
+						</div>
+					</div>
 					<div class="col-sm-6"></div>
 					<div class="col-sm-3"></div>
 				</div>
 			</div>
 		</section>
+		<!-- END destaques da pagina inicial -->
 
 	</section><!-- /.page-home -->
 
