finalizar a area de destaques e alterar as fotos do site

--- a/login.html
+++ b/login.html
@@ -16,7 +16,7 @@
 					</header>
 
 					<!-- BEGIN page-login-form -->
-					<form class="page-login-form custom-form" action="" method="post">
+					<form class="page-login-form custom-form" action="./" method="post">
 						<div class="form-group">
 							<input class="form-control" type="text" name="username" placeholder="Username">
 						</div>
