--- a/index.html
+++ b/index.html
@@ -52,19 +52,19 @@
 				<div class="col-sm-10 col-sm-offset-1">
 					<div class="page-home-gallery rodar-galeria">
 						<div class="gallery-item">
-							<img src="http://lorempixel.com/output/animals-q-c-280-170-10.jpg">
+							<img src="src/img/corujas/thumb/02.jpg">
 						</div>
 						<div class="gallery-item">
-							<img src="http://lorempixel.com/output/animals-q-c-280-170-4.jpg">
+							<img src="src/img/corujas/thumb/03.jpg">
 						</div>
 						<div class="gallery-item">
-							<img src="http://lorempixel.com/output/animals-q-c-280-170-5.jpg">
+							<img src="src/img/corujas/thumb/04.jpg">
 						</div>
 						<div class="gallery-item">
-							<img src="http://lorempixel.com/output/animals-q-c-280-170-8.jpg">
+							<img src="src/img/corujas/thumb/05.jpg">
 						</div>
 						<div class="gallery-item">
-							<img src="http://lorempixel.com/output/animals-q-c-280-170-1.jpg">
+							<img src="src/img/corujas/thumb/06.jpg">
 						</div>
 					</div><!-- /.page-home-gallery -->
 				</div>
@@ -77,6 +77,8 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-sm-3">
+
+						<!-- BEGIN qr codes -->
 						<div class="row featured-qr-code">
 							<div class="col-sm-6 area-item-qr-code">
 								<div class="item-qr-code">
@@ -103,9 +105,30 @@
 								</div>
 							</div>
 						</div>
+						<!-- END qr codes -->
 					</div>
-					<div class="col-sm-6"></div>
-					<div class="col-sm-3"></div>
+					<div class="col-sm-6">
+						<img class="img-responsive" src="src/img/corujas/thumb/01.jpg">
+					</div>
+					<div class="col-sm-3">
+						<div class="text-left featured-newsletter">
+							<i class="icon icon-blue glyphicon glyphicon-envelope"></i>
+
+							<!-- BEGIN formulario de newsletter -->
+							<form class="formulario">
+								<div class="form-group">
+									<input class="form-control" type="text" placeholder="Your Email">
+								</div>
+								<div class="form-group">
+									<input class="form-control" type="text" placeholder="Your Name">
+								</div>
+								<div class="form-group text-right">
+									<button class="btn btn-blue">Join</button>
+								</div>
+							</form>
+							<!-- END formulario de newsletter -->
+						</div>
+					</div>
 				</div>
 			</div>
 		</section>
