corrigir as cores do menu no topo

--- a/index.html
+++ b/index.html
@@ -31,13 +31,13 @@
 			    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 			      <ul class="nav navbar-nav navbar-right">
 			        <li>
-			        	<a href="#">
-			        		<i class="glyphicon glyphicon-chevron-left"></i> 
+			        	<a class="link-item-menu" href="#">
+			        		<i class="icon glyphicon glyphicon-chevron-left"></i> 
 			        		Back to frontpage
 		        		</a>
 	        		</li>
 			        <li>
-			        	<a href="#">Download</a>
+			        	<a class="link-item-menu link-item-menu-laranja" href="#">Download</a>
 		        	</li>
 			      </ul>
 			    </div><!-- /.navbar-collapse -->
