corrigir a versao mobile

--- a/index.html
+++ b/index.html
@@ -18,30 +18,18 @@
 			<nav class="navbar">
 			  <div class="container">
 
-			    <!-- botao para abri menu na versao mobile -->
-			    <div class="navbar-header">
-			      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-			        <span class="sr-only">Toggle navigation</span>
-			        <span class="icon-bar"></span>
-			        <span class="icon-bar"></span>
-			        <span class="icon-bar"></span>
-			      </button>
-			    </div>
-
 			    <!-- links de acesso rapido do topo -->
-			    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-			      <ul class="nav navbar-nav navbar-right">
-			        <li>
-			        	<a class="link-item-menu" href="#">
-			        		<i class="icon glyphicon glyphicon-chevron-left"></i> 
-			        		Back to frontpage
-		        		</a>
-	        		</li>
-			        <li>
-			        	<a class="link-item-menu link-item-menu-laranja" href="#">Download</a>
-		        	</li>
-			      </ul>
-			    </div><!-- /.navbar-collapse -->
+				<ul class="nav navbar-nav navbar-right">
+					<li>
+						<a class="link-item-menu" href="#">
+							<i class="icon glyphicon glyphicon-chevron-left"></i> 
+							Back to frontpage
+						</a>
+					</li>
+					<li>
+						<a class="link-item-menu link-item-menu-laranja" href="#">Download</a>
+					</li>
+				</ul>
 			  </div><!-- /.container -->
 			</nav>
 		</header>
@@ -77,29 +65,29 @@
 		<section class="page-home-featured">
 			<div class="container">
 				<div class="row">
-					<div class="col-sm-3">
+					<div class="col-sm-3 item-featured">
 
 						<!-- BEGIN qr codes -->
 						<div class="row featured-qr-code">
-							<div class="col-sm-6 area-item-qr-code">
+							<div class="col-xs-6 area-item-qr-code">
 								<div class="item-qr-code">
 									<img class="qr-code-image" src="src/img/qr-code.png">
 									<h3 class="qr-code-title">wechat</h3>
 								</div>
 							</div>
-							<div class="col-sm-6 area-item-qr-code">
+							<div class="col-xs-6 area-item-qr-code">
 								<div class="item-qr-code">
 									<img class="qr-code-image" src="src/img/qr-code.png">
 									<h3 class="qr-code-title">facebook</h3>
 								</div>
 							</div>
-							<div class="col-sm-6 area-item-qr-code">
+							<div class="col-xs-6 area-item-qr-code">
 								<div class="item-qr-code">
 									<img class="qr-code-image" src="src/img/qr-code.png">
 									<h3 class="qr-code-title">line</h3>
 								</div>
 							</div>
-							<div class="col-sm-6 area-item-qr-code">
+							<div class="col-xs-6 area-item-qr-code">
 								<div class="item-qr-code">
 									<img class="qr-code-image" src="src/img/qr-code.png">
 									<h3 class="qr-code-title">twitter</h3>
@@ -108,11 +96,11 @@
 						</div>
 						<!-- END qr codes -->
 					</div>
-					<div class="col-sm-6">
+					<div class="col-sm-6 item-featured">
 						<img class="img-responsive" src="src/img/corujas/thumb/01.jpg">
 					</div>
-					<div class="col-sm-3">
-						<div class="text-left featured-newsletter">
+					<div class="col-sm-3 item-featured">
+						<div class="featured-newsletter">
 							<i class="icon icon-blue glyphicon glyphicon-envelope"></i>
 
 							<!-- BEGIN formulario de newsletter -->
