--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 	<link rel="stylesheet" type="text/css" href="node_modules/owlcarousel/owl-carousel/owl.theme.css">
 	<link rel="stylesheet" type="text/css" href="node_modules/owlcarousel/owl-carousel/owl.transitions.css">
 	<link rel="stylesheet" type="text/css" href="node_modules/owlcarousel/owl-carousel/owl.carousel.css">
+	<link rel="stylesheet" type="text/css" href="node_modules/fancybox/dist/css/jquery.fancybox.css">
 	<link rel="stylesheet" type="text/css" href="src/css/main.css">
 </head>
 <body>
@@ -41,19 +42,19 @@
 				<div class="col-sm-10 col-sm-offset-1">
 					<div class="page-home-gallery rodar-galeria">
 						<div class="gallery-item">
-							<img src="src/img/corujas/thumb/02.jpg">
+							<a class="fancybox" rel="galeria" href="src/img/corujas/02.jpg"><img src="src/img/corujas/thumb/02.jpg"></a>
 						</div>
 						<div class="gallery-item">
-							<img src="src/img/corujas/thumb/03.jpg">
+							<a class="fancybox" rel="galeria" href="src/img/corujas/03.jpg"><img src="src/img/corujas/thumb/03.jpg"></a>
 						</div>
 						<div class="gallery-item">
-							<img src="src/img/corujas/thumb/04.jpg">
+							<a class="fancybox" rel="galeria" href="src/img/corujas/04.jpg"><img src="src/img/corujas/thumb/04.jpg"></a>
 						</div>
 						<div class="gallery-item">
-							<img src="src/img/corujas/thumb/05.jpg">
+							<a class="fancybox" rel="galeria" href="src/img/corujas/05.jpg"><img src="src/img/corujas/thumb/05.jpg"></a>
 						</div>
 						<div class="gallery-item">
-							<img src="src/img/corujas/thumb/06.jpg">
+							<a class="fancybox" rel="galeria" href="src/img/corujas/06.jpg"><img src="src/img/corujas/thumb/06.jpg"></a>
 						</div>
 					</div><!-- /.page-home-gallery -->
 				</div>
@@ -97,7 +98,7 @@
 						<!-- END qr codes -->
 					</div>
 					<div class="col-sm-6 item-featured">
-						<img class="img-responsive" src="src/img/corujas/thumb/01.jpg">
+						<a class="fancybox" href="src/img/corujas/01.jpg"><img class="img-responsive" src="src/img/corujas/thumb/01.jpg"></a>
 					</div>
 					<div class="col-sm-3 item-featured">
 						<div class="featured-newsletter">
@@ -127,6 +128,7 @@
 
 	<script type="text/javascript" src="node_modules/jquery/dist/jquery.min.js"></script>
 	<script type="text/javascript" src="node_modules/owlcarousel/owl-carousel/owl.carousel.js"></script>
+	<script type="text/javascript" src="node_modules/fancybox/dist/js/jquery.fancybox.js"></script>
 	<script type="text/javascript" src="src/js/main.js"></script>
 </body>
 </html>
